# mcp-snowflake-server-readonly

./: .gitignore  Dockerfile  README.md  how_to_update.md  pyproject.toml
src/mcp_snowflake_server/: __init__.py  server.py  write_detector.py
